# base-fast-api

./: .env.example  .gitignore  README.md  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
app/: database.py  dependencies.py  main.py  settings.py
app/core/: logger.py  r2_storage.py
app/dependencies/: auth.py  logger.py
app/middleware/: logging.py  trace_id.py
app/routers/: auth.py  users.py
app/services/: user_service.py
app/storage/: user_storage.py
app/users/: common.py  models.py  routers.py  services.py  storage.py
logs/: .gitignore
schema/: 001_create_users.sql
tests/: conftest.py  test_services.py  test_storage.py
tests/integrations/: test_routers.py
tests/services/: test_services.py
tests/services/users/: test_services.py
tests/storages/users/: test_storage.py
tests/unit/: test_service.py  test_storage.py
